[package]
name = "krawlet_enderstorage_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.12.1", features = ["macros"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
